samples/_failures_safe/1761301220_2c2b1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2a0b67a.c: In function ‘main’:
./samples/SAFE/__tmp_b2a0b67a.c:173:13: error: expected ‘;’ at end of input
  173 |         free
      |             ^
      |             ;
./samples/SAFE/__tmp_b2a0b67a.c:173:9: error: expected declaration or statement at end of input
  173 |         free
      |         ^~~~
./samples/SAFE/__tmp_b2a0b67a.c:173:9: error: expected declaration or statement at end of input
